Добавил сервис коллектор(2)

--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 collector.kafka_bootstrap_server_address=localhost:9092
+collector.kafka_key_serializer_class=org.apache.kafka.common.serialization.StringSerializer
+collector.kafka_value_serializer_class=ru.yandex.practicum.telemetry.collector.config.AvroSerializer
 org.apache.avro.specific.use_custom_coders=true
 server.port=8080
