--- a/telemetry/aggregator/src/main/resources/application.yaml
+++ b/telemetry/aggregator/src/main/resources/application.yaml
@@ -5,8 +5,10 @@ aggregator:
       key.serializer: "org.apache.kafka.common.serialization.StringSerializer"
       value.serializer: "ru.yandex.practicum.kafka.telemetry.serializer.AvroSerializer"
     consumer:
-      bootstrap.servers: "localhost:9092"
-      key.deserializer: "org.apache.kafka.common.serialization.StringDeserializer"
-      value.deserializer: "ru.yandex.practicum.kafka.telemetry.deserializer.SensorEventDeserializer"
-      group.id: "aggregator-consumer"
-      enable.auto.commit: false
+        base:
+          bootstrap.servers: "localhost:9092"
+          key.deserializer: "org.apache.kafka.common.serialization.StringDeserializer"
+          value.deserializer: "ru.yandex.practicum.kafka.telemetry.deserializer.SensorEventDeserializer"
+          group.id: "aggregator-consumer"
+          enable.auto.commit: false
+        poll_duration_seconds: 5
