--- a/telemetry/analyzer/src/main/resources/application.yaml
+++ b/telemetry/analyzer/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ analyzer:
         value.deserializer: "ru.yandex.practicum.kafka.telemetry.deserializer.HubEventDeserializer"
         group.id: "analyzer-consumer"
         enable.auto.commit: false
+      poll_duration_seconds:
+        sensor_snapshot: 5
+        hub_event: 5
 grpc:
   client:
     hub-router:
@@ -30,6 +33,7 @@ spring:
     url: "jdbc:postgresql://localhost:5434/telemetry_analyzer"
     username: "analyzer"
     password: "analyzer"
+
 #logging:
 #  level:
 #    org:
