Добавил отдельный сервер конфигурации

--- a/telemetry/aggregator/src/main/resources/application.yaml
+++ b/telemetry/aggregator/src/main/resources/application.yaml
@@ -1,14 +1,11 @@
-aggregator:
-  kafka:
-    producer:
-      bootstrap.servers: "localhost:9092"
-      key.serializer: "org.apache.kafka.common.serialization.StringSerializer"
-      value.serializer: "ru.yandex.practicum.kafka.telemetry.serializer.AvroSerializer"
-    consumer:
-        base:
-          bootstrap.servers: "localhost:9092"
-          key.deserializer: "org.apache.kafka.common.serialization.StringDeserializer"
-          value.deserializer: "ru.yandex.practicum.kafka.telemetry.deserializer.SensorEventDeserializer"
-          group.id: "aggregator-consumer"
-          enable.auto.commit: false
-        poll_duration_seconds: 5
+spring:
+  application:
+    name: aggregator
+  config:
+    import: configserver:http://localhost:8888
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        useRandomPolicy: true
+        max-interval: 6000
