--- a/telemetry/collector/src/main/resources/application.yaml
+++ b/telemetry/collector/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
-collector:
-  kafka:
-    producer:
-      bootstrap.servers: "localhost:9092"
-      key.serializer: "org.apache.kafka.common.serialization.StringSerializer"
-      value.serializer: "ru.yandex.practicum.kafka.telemetry.serializer.AvroSerializer"
-
-org.apache.avro.specific.use_custom_coders: true
-grpc.server.port: 59091
+spring:
+  application:
+    name: collector
+  config:
+    import: configserver:http://localhost:8888
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        useRandomPolicy: true
+        max-interval: 6000 
