--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -11,4 +11,13 @@ spring:
             - classpath:config/telemetry/{application}
 server:
   port:
-    8888
+    0
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+
+
+
+
